Fixing z-index for home buttons

--- a/components/ButtonLinks/ButtonLinks.module.css
+++ b/components/ButtonLinks/ButtonLinks.module.css
@@ -3,6 +3,7 @@
   gap: 15px;
   justify-content: flex-start;
   flex-wrap: wrap;
+  z-index: 2;
 }
 
 .buttons__icon {
